# greentic-qa

./: Cargo.toml
.codex/tmp/arg0/codex-arg0uR114W/: codex-linux-sandbox
.github/workflows/: release-binaries.yml
ci/: local_check.sh
crates/component-qa/: Cargo.toml  README.md  component.manifest.json
crates/component-qa/src/: lib.rs  qa.rs
crates/component-qa/tests/: qa_asset_loading.rs
crates/qa-cli/: Cargo.toml
crates/qa-cli/i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
crates/qa-cli/src/: builder.rs  cli_i18n.rs  main.rs  wizard.rs
crates/qa-lib/: Cargo.toml
crates/qa-lib/src/: lib.rs
crates/qa-spec/src/: answers.rs  validate.rs
tools/: i18n.sh
