[package]
name = "greentic-qa"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Greentic AI <dev@greentic.ai>"]
description = "Command line helper for QA workflows."
license = "MIT"
repository = "https://github.com/greentic-ai/greentic-qa"
homepage = "https://github.com/greentic-ai/greentic-qa"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
component-qa = { workspace = true }
qa-spec = { workspace = true }
greentic-qa-lib = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_fs = { workspace = true }
tempfile = { workspace = true }

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
